iter_language/tests/corpus/invalid/unknown-event.iter
queue memory

workspace local { base = "." }

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = local
  queue = memory
  continue_on_error = false
  behavior = wait
  prompt = "iterate"

  on no_such_event {
    shell "echo hi"
  }
}
